test/resources/valid/ValidNumber.flo
action INCREMENT_COUNTER = counter();

flow COUNTER = {
    number count = 0;
    INCREMENT_COUNTER >> count;
}