test/resources/invalid/typecheck/InvalidCounterNonNumber.flo
action INCREMENT_COUNTER = counter();

flow COUNTER = {
    boolean count = false;
    INCREMENT_COUNTER >> count;
}